tiny: don't disable units / woice list on startup. C -> shift+C toggle copy option

--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -482,7 +482,7 @@
      </item>
      <item row="23" column="0">
       <property name="text">
-       <string>C</string>
+       <string>Shift+C</string>
       </property>
      </item>
      <item row="23" column="1">
