--- a/src/styles/ptCollage/ptCollage.qss
+++ b/src/styles/ptCollage/ptCollage.qss
@@ -10,7 +10,8 @@ QMessageBox::about {
 QPushButton,
 QLineEdit,
 QComboBox,
-QSpinBox {
+QSpinBox,
+QTextEdit {
   padding: 2px 6px;
 }
 
@@ -48,7 +49,8 @@ QMenuBar::item {
 
 QLineEdit,
 QListView,
-QSpinBox {
+QSpinBox,
+QTextEdit {
   color: #00F080;
 }
 
@@ -64,7 +66,8 @@ QMenuBar::item:disabled {
 }
 
 QLineEdit:disabled,
-QListView:disabled {
+QListView:disabled,
+QTextEdit:disabled {
   color: #4E4B61;
 }
 
@@ -215,7 +218,8 @@ QFrame {
 }
 
 QLineEdit,
-QSpinBox {
+QSpinBox,
+QTextEdit {
   font-weight: bold;
   border: 1px transparent;
   border-image: url("image/lineedit-border.png"), 1px 1px 1px 1px fill, stretch stretch;
