update song title dialog form info

--- a/src/editor/sidemenu/SideMenu.ui
+++ b/src/editor/sidemenu/SideMenu.ui
@@ -477,6 +477,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="titleCommentBtn">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="text">
           <string>Edit title &amp;&amp; comment</string>
          </property>
