--- a/src/editor/sidemenu/SideMenu.ui
+++ b/src/editor/sidemenu/SideMenu.ui
@@ -124,7 +124,7 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QTableView" name="woiceList">
+        <widget class="TableView" name="woiceList">
          <property name="focusPolicy">
           <enum>Qt::NoFocus</enum>
          </property>
