--- a/src/editor/sidemenu/SideMenu.ui
+++ b/src/editor/sidemenu/SideMenu.ui
@@ -124,7 +124,7 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="TableView" name="woiceList">
+        <widget class="QTableView" name="woiceList">
          <property name="focusPolicy">
           <enum>Qt::NoFocus</enum>
          </property>
@@ -477,9 +477,6 @@
        </item>
        <item>
         <widget class="QPushButton" name="titleCommentBtn">
-         <property name="focusPolicy">
-          <enum>Qt::NoFocus</enum>
-         </property>
          <property name="text">
           <string>Edit title &amp;&amp; comment</string>
          </property>
