--- a/src/editor/sidemenu/SongTitleDialog.ui
+++ b/src/editor/sidemenu/SongTitleDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Edit song info</string>
+   <string>Dialog</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
