Language export / selection options (#111)
* add support to read translation.qm in the same dir as ptcollab.exe, fallback to file in resources file

* add qm file so build

* language select, korean translation, not quite working build

* change instlal path?

* package and include translations

* embed generated qm files in cmake

* tidy up changes, fix wildcard in qmake

* remove distfile

* thanks

* no subdir for cmake qm files

--- a/src/editor/SettingsDialog.ui
+++ b/src/editor/SettingsDialog.ui
@@ -176,6 +176,16 @@
         </layout>
        </item>
        <item>
+        <widget class="QLabel" name="label_8">
+         <property name="text">
+          <string>Language</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="languageCombo"/>
+       </item>
+       <item>
         <widget class="QCheckBox" name="showWelcomeDialogCheck">
          <property name="text">
           <string>Show welcome dialog on startup</string>
